Fixed: custom domain option alignment

--- a/assets/scss/common/_form.scss
+++ b/assets/scss/common/_form.scss
@@ -178,6 +178,7 @@
 	&.block {
 		display: inline-block;
 		margin-right: 20px;
+		min-height: 20px;
 		.btl-tooltip {
 			margin-left: 5px;
 		}
